--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,6 @@ header nav a{
     transition: 0.3s;
     font-size: 0.9em;
     text-transform: uppercase;
-
 }
 
 header nav a:hover{
@@ -131,4 +130,38 @@ header nav a:hover{
 
 .contenido .contenedor_imagen img{
     width: 400px;
+}
+
+/* Círculo */
+
+.circulo{
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #9b7239;
+    clip-path: circle(650px at right 750px);
+    width: 100%;
+    height: 100%;
+}
+
+/* Footer */
+
+footer{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    padding: 0 100px 30px;
+}
+
+footer a{
+    padding: 10px;
+    color: #ffffd5;
+    font-size: 1.5em;
+    transition: 0.3s;
+}
+
+footer a:hover{
+    color: #7a551c;
 }
