--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ header nav a:hover{
 }
 
 .contenido .contenedor_imagen img{
-    width: 400px;
+    height: 450px;
 }
 
 /* Círculo */
@@ -139,7 +139,7 @@ header nav a:hover{
     top: 0;
     left: 0;
     background-color: #9b7239;
-    clip-path: circle(650px at right 750px);
+    clip-path: circle(625px at right 700px);
     width: 100%;
     height: 100%;
 }
