--- a/css/style.css
+++ b/css/style.css
@@ -294,3 +294,53 @@ footer a:hover{
         clip-path: circle(300px at center bottom);
     }
 }
+
+/* Celulares */
+
+@media only screen and (max-width: 400px) {
+    section{
+        padding: 30px;
+    }
+
+    header .logo {
+        font-size: 1.5em;
+    }
+
+    .contenido{
+        margin-top: 40px;
+        padding-left: 20px;
+        gap: 60px;
+    }
+
+    .contenido .contenedor_titulo h2{
+        font-size: 1.5em;
+    }
+
+    .contenido .contenedor_titulo p {
+        font-size: 1em;
+    }
+
+    footer{
+        right: 35%;
+        padding: 0;
+    }
+
+    header .nav_bar.active{
+        width: 100%;
+        height: calc(100% - 50px);
+        padding-right: 20px;
+        position: fixed;
+        top: 80px;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background-color: #bba694;
+        z-index: 1;
+    }
+
+    .circulo{
+        clip-path: circle(200px at center bottom);
+    }
+}
